fix Sponsors header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,10 @@ SPONSORS
 	font-size: 20px;
 }
 
+#sponsors h2 {
+	text-align: left;
+}
+
 #sponsors .row {
 	padding: 30px 0;
 }
